crates/alef-backend-kotlin/tests/snapshots/jni_emitter_test__snapshot_jni_bridge_object.snap
---
source: crates/alef-backend-kotlin/tests/jni_emitter_test.rs
expression: content
---
// Generated by alef. Do not edit by hand.

package dev.kreuzberg

object DemoBridge {
    init { System.loadLibrary("demo_jni") }

    external fun nativeFoo(value: Int): String

    // JNI streaming external funs — implementations are Rust JNI shims.

    // Streaming JNI externs for DefaultClient.streamData
    external fun nativeDefaultClientStreamDataStart(clientHandle: Long, requestJson: String): Long
    external fun nativeDefaultClientStreamDataNext(streamHandle: Long): String?
    external fun nativeDefaultClientStreamDataFree(streamHandle: Long)
}
