crates/alef-backend-kotlin/tests/snapshots/jni_emitter_test__snapshot_jni_bridge_object_full_surface.snap
---
source: crates/alef-backend-kotlin/tests/jni_emitter_test.rs
expression: content
---
// Generated by alef. Do not edit by hand.

package dev.kreuzberg

object DemoBridge {
    init { System.loadLibrary("demo_jni") }

    // JNI external funs for client instance methods.
    external fun nativeDefaultClientChat(handle: Long, requestJson: String): String
    external fun nativeDefaultClientEmbeddings(handle: Long, requestJson: String): String
}
